# wrap-rs

./: Cargo.toml  Makefile  README.md
examples/: expand_me.rs  working_around_default_impls.rs
src/: lib.rs
tests/: wrap_fn.rs
