[package]
name = "wrap-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.0.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "fold"] }

[dev-dependencies]
tokio = { version = "1.7.1", features = ["rt", "macros", "rt-multi-thread"] }
